--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,59 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//
+//buildscript {
+//  ext.kotlin_version = '1.1.3-2'
+//  repositories {
+//    jcenter()
+//  }
+//  dependencies {
+//    classpath 'com.android.tools.build:gradle:2.3.3'
+//    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//
+//    // NOTE: Do not place your application dependencies here; they belong
+//    // in the individual module build.gradle files
+//  }
+//}
+//
+//allprojects {
+//  repositories {
+//    jcenter()
+//  }
+//}
+//
+//task clean(type: Delete) {
+//  delete rootProject.buildDir
+//}
+apply from: 'config/buildsystem/ci.gradle'
+apply from: 'config/buildsystem/dependencies.gradle'
+apply plugin: 'kotlin'
+
 
 buildscript {
   ext.kotlin_version = '1.1.3-2'
   repositories {
     jcenter()
+    mavenCentral()
+
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
+    classpath "io.realm:realm-gradle-plugin:1.0.0"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
   }
 }
 
 allprojects {
-  repositories {
-    jcenter()
+  ext {
+    androidApplicationId = "com.humaniq.pro"
+    androidVersionCode = 1
+    androidVersionName = "1.0"
+    testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
+    testApplicationId = "com.djuarez.rxkotlin" + '.test'
   }
-}
 
-task clean(type: Delete) {
-  delete rootProject.buildDir
+  task wrapper(type: Wrapper) {
+    description 'Creates the gradle wrapper.'
+    gradleVersion '2.8'
+  }
 }
